<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:src="@mipmap/juliacacampus"
    tools:context="edqs.pe.edu.upeu.proyecto01.Home.HomeActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/juliacacampus" />


        <TextView
            android:id="@+id/idTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/title_login"
            android:textAlignment="center" />


        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/idTitulo"
            android:layout_marginTop="23dp">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@mipmap/ic_logoe" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/idUsuario"
                    android:layout_width="348dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/tableLayout"
                    android:ems="10"
                    android:hint="@string/txt_user"
                    android:inputType="textPersonName"
                    android:textColor="@color/Buttom"
                    android:textColorLink="@color/Buttom" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/idClave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/tableLayout"
                    android:ems="10"
                    android:hint="@string/txt_password"
                    android:inputType="textPersonName|textPassword"
                    android:shadowColor="@color/Buttom"

                    android:textColor="@color/Buttom"
                    android:textColorLink="@color/Buttom" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/IdIngresar"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/tableLayout"
                    android:layout_marginTop="30dp"
                    android:background="@color/Buttom"
                    android:text="@string/btn_sing" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/idCancelar"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/tableLayout"
                    android:layout_marginTop="10dp"
                    android:background="@color/Buttom"
                    android:text="@string/btn_cancel" />

                <TextView
                    android:id="@+id/idMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="20dp" />
            </TableRow>


            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"

                />


        </TableLayout>


    </RelativeLayout>





</LinearLayout>